--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,19 @@
 @tailwind utilities;
 
 @layer base {
+  li {
+    @apply cursor-pointer;
+  }
+  h1 {
+    @apply text-4xl;
+  }
+  h2 {
+    @apply text-2xl;
+  }
   h3 {
     @apply text-lg;
   }
-
-  li{
-    @apply cursor-pointer
+  h4 {
+    @apply text-base;
   }
 }
